Bug 94734 - Font colour icon in sidebar disappears when changing font colour (comment 4)
Summary: Font colour icon in sidebar disappears when changing font colour (comment 4)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Björn Michaelsen
URL:
Whiteboard: target:5.2.0 target:5.1.3
Keywords: bibisected, bisected, regression
: 96729 97220 (view as bug list)
Depends on:
Blocks: Sidebar-Properties
  Show dependency treegraph
 
Reported: 2015-10-03 14:35 UTC by Gabriel Diosan
Modified: 2016-10-24 16:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing font colour icon disappearing (121.43 KB, image/png)
2015-10-03 14:35 UTC, Gabriel Diosan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Diosan 2015-10-03 14:35:44 UTC
Created attachment 119240 [details]
Screenshot showing font colour icon disappearing

Font colour icon in sidebar disappears when changing font colour.

Steps to reproduce:

1. Open LibreOffice Writer
3. Type some text
4. Select the text and use the "Font Colour" icon in the sidebar to change its colour.

Current Behaviour:

Part of the icon (the "a" symbol) disappears. The bottom part of the icon which shows the colour remains.

Expected Behaviour:

The "a" in the "Font Colour" symbol should not disappear.

Notes:

This does not occur for the "Font Colour" icon in the standard toolbar, only in the sidebar.

Screenshot attached to show the problem.

Tested on:

LibreOffice 5.0.2 Windows 7 32 Bit

LibreOffice Version: 5.1.0.0.alpha1+
Build ID: 329496c1f75f97d2e6119ceb214a2ea1fbadb17a
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-10-03_02:47:24
Locale: en-AU (en_AU.UTF-8)

LibreOffice Version: 5.0.1.2
Build ID: 00m0(Build:2)
Locale: en-AU (en_AU.UTF-8)
Ubuntu Gnome 15.10
Comment 1 tommy27 2015-10-03 18:48:52 UTC
I confirm bug under Win8.1 x64 using LibO 5.0.2.1 and recent 5.1.0.0 alpha daily build. no such a bug with LibO 4.4.5.2, hence 5.0.x regression that needs bibisecting
Comment 2 raal 2015-10-05 08:29:37 UTC
This seems to have begun at the below commit.
Adding Cc: to caolanm@redhat.com ; Could you possibly take a look at this
one? Thanks
 e1ff23cf901fb7bcc5f597a7fdc7b8c23218444a is the first bad commit
commit e1ff23cf901fb7bcc5f597a7fdc7b8c23218444a
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Jun 3 08:49:41 2015 -0500

    source 27d94c482e82ea5d4f202109614c6fb3578fb0a4

    source 27d94c482e82ea5d4f202109614c6fb3578fb0a4

:040000 040000 770e8cdbf713185c540c09df059796a9ce75d757 816338be8bb30a00b2427b6414e8154869d254ee M      instdir

author	Caolán McNamara <caolanm@redhat.com>	2015-05-06 09:25:34 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2015-05-06 09:27:18 (GMT)
commit 27d94c482e82ea5d4f202109614c6fb3578fb0a4 (patch)


 ~/bibisect-win32-5.0
$ git bisect log
# bad: [575cd25f0560684895018d8fcfb1818dd4dd1c9b] source ab465b90f6c6da5595393a0ba73f33a1e71a2b65
# good: [f449493ae11ac76cc7396bddeaa624a60c565936] source 57d6b92b69a31260dea0d84fcd1fc5866ada7adb
git bisect start 'libreoffice-5-0-branch-point' 'oldest'
# good: [da12357c491a0dce5acc0bd1f00c26f89d8f20e6] source c1b9402d49a7cd4bec383f28d397d9d89541f0e0
git bisect good da12357c491a0dce5acc0bd1f00c26f89d8f20e6
# good: [2783cac5d1f18f44ce31f52eb7ae2f0ea17d0c96] source 5d7a203bdae1940e4846c4c42f5d733e4ffa4160
git bisect good 2783cac5d1f18f44ce31f52eb7ae2f0ea17d0c96
# good: [c6b55917df3df447007dbb29dd84f24d1203cfb3] source 5b8acf459e4a6728ea656e7abd5dfb08ad2ae345
git bisect good c6b55917df3df447007dbb29dd84f24d1203cfb3
# bad: [ac46cb21db25e4b49f28bbe57f5846dbca57e486] source dbf1e124c7fef7cae5392959ab6a697a3a89c609
git bisect bad ac46cb21db25e4b49f28bbe57f5846dbca57e486
# bad: [d6a38c4ea76c2485cebb84f4414de2cac1862ced] source a6b9d9a19fb8c5c9f166682f52941aee25b89c94
git bisect bad d6a38c4ea76c2485cebb84f4414de2cac1862ced
# good: [217d9b08b343b01ff37df81051400e08e87d582a] source 86172696f337317320f857016287e4a8850e613c
git bisect good 217d9b08b343b01ff37df81051400e08e87d582a
# bad: [9a8a1910990cc97280d37864d40c48274e2cd0f7] source 0a825b9aae390dc426261e873ffbacc867814e53
git bisect bad 9a8a1910990cc97280d37864d40c48274e2cd0f7
# good: [211b534a614e979e8d3bee02374336d28f475fa4] source 5d7af14e3224e784a3c1cc6b0fcd23889c3d8ed1
git bisect good 211b534a614e979e8d3bee02374336d28f475fa4
# good: [74c528619f95ca7e310cdcc4de03e6cb2bca8e2c] source b515d1f36fdf8c242079da60eb4ecd5fd456583c
git bisect good 74c528619f95ca7e310cdcc4de03e6cb2bca8e2c
# good: [8200c1b2eb61fffd57a194d184196f27c2f75e12] source bfcb2a1a75ae0ff780bff0747ea90c1e79a56fc3
git bisect good 8200c1b2eb61fffd57a194d184196f27c2f75e12
# good: [ceb4751c32e717ae28caca1476a38c16cd191d34] source ea593a29006e71e25071aaf01c838e5da632adf0
git bisect good ceb4751c32e717ae28caca1476a38c16cd191d34
# bad: [dff8bbd70c542262653b41379d7df7062ff2e6e8] source 7bd6f298b43732fd5d4a270f2493ae11eb20ad22
git bisect bad dff8bbd70c542262653b41379d7df7062ff2e6e8
# bad: [e1ff23cf901fb7bcc5f597a7fdc7b8c23218444a] source 27d94c482e82ea5d4f202109614c6fb3578fb0a4
git bisect bad e1ff23cf901fb7bcc5f597a7fdc7b8c23218444a
# first bad commit: [e1ff23cf901fb7bcc5f597a7fdc7b8c23218444a] source 27d94c482e82ea5d4f202109614c6fb3578fb0a4
Comment 3 Björn Michaelsen 2015-12-04 12:44:54 UTC
Cannot reproduce on 1:5.0.3~rc2-0ubuntu1/Ubuntu 15.10.
Comment 4 Björn Michaelsen 2015-12-04 12:52:40 UTC
Can reproduce now:
1. Open LibreOffice Writer
2. Type some text
3. Select the text and use _the pulldown on the "Font Colour"_ icon in the sidebar to change its colour.

The icon does NOT disappear if one uses the Font Colour button, just when one selects something from the pulldown.
Comment 5 Robinson Tryon (qubit) 2015-12-13 11:14:25 UTC Comment hidden (obsolete)
Comment 6 Maxim Monastirsky 2015-12-26 18:54:10 UTC
*** Bug 96729 has been marked as a duplicate of this bug. ***
Comment 7 Maxim Monastirsky 2016-01-19 20:36:31 UTC
*** Bug 97220 has been marked as a duplicate of this bug. ***
Comment 8 Björn Michaelsen 2016-03-23 11:22:58 UTC
Reverting https://github.com/LibreOffice/core/commit/27d94c482e82ea5d4f202109614c6fb3578fb0a4 fixes this, but I dont see what the point of that commit was in the first place as the behaviour with 27d94c48 reverted looks good to me and even from the commit message I dont get what the commit is supposed to fix.

So dont want to revert this blindly as apparently I am overlooking something.

@Caolan: Can you elaborate?
Comment 9 Maxim Monastirsky 2016-03-23 11:38:41 UTC
(In reply to Björn Michaelsen from comment #8)
> but I dont see what the
> point of that commit was in the first place
It fixed Bug 90073. There are two kinds of color picker - narrow and wide, and both share the same code.
Comment 10 Commit Notification 2016-03-25 01:30:45 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=600ad9d1552e5458bb0a8c47c892bebe219ebb01

tdf#94734: fix icon in sidebar disappears when changing font colour

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2016-03-25 08:30:13 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=91455345aa2a15309032b9b3c6e6c32f8701fb33&h=libreoffice-5-1

tdf#94734: fix icon in sidebar disappears when changing font colour

It will be available in 5.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.