tdf#94734: fix icon in sidebar disappears when changing font colour

- properly initalize maImageOriginal along with maImage in various
  places
- this is a regression from 27d94c482e82ea5d4f202109614c6fb3578fb0a4
- that commit is mostly innocent in itself though, only exposing
  omissions from b8f21298288890d52c06fef6c84441634c56c986
- having both maImage and maImageOriginal is extremely fragile as-is --
  likely I'd be helpful to have them private in ImplToolItem and then a
  SetImage accessor with a tristate eOriginal/eCached/eBoth enum
  parameter to prevent oversights like this in the future ...

Change-Id: I294d7ed8e07be5cadec0ae251cc08c8d089bd059